download infra-as-code repo

--- a/cloud-init/cloud-init.yaml
+++ b/cloud-init/cloud-init.yaml
@@ -172,6 +172,7 @@ runcmd:
   - sed -i 's/BIG-REQUESTS/_IG-REQUESTS/' /usr/lib/x86_64-linux-gnu/libxcb.so.1.1.0
   - runuser -l tomas -c 'cd /home/tomas && git clone https://github.com/tkubica12/aks-mensi-demo.git'
   - runuser -l tomas -c 'cp /home/tomas/aks-mensi-demo/keybindings.json /home/tomas/.config/Code/User/keybindings.json'
+  - runuser -l tomas -c 'cd /home/tomas && git clone https://github.com/tkubica12/infra-as-code-on-azure.git'
   - sed -i.bak '/fi/a \#xrdp multiple users configuration \n mate-session \n' /etc/xrdp/startwm.sh
   - systemctl start xrdp
 
